--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <!-- Hier könnten weitere Zeilen hinzugefügt werden -->
             <tr>
                 <!-- Hier füge JavaScript ein, um receivedData einzufügen -->
-                <td id="receivedDataArray" style="padding: 10px;"></td>
+                <td id="receivedDataCell" style="padding: 10px;"></td>
                 <td style="padding: 10px;">01.01.2023</td>
                 <td style="padding: 10px;">
                     <button style="background-color: red; color: white; border: none; padding: 5px 10px; border-radius: 4px; cursor: pointer;">Löschen</button>
