--- a/index.html
+++ b/index.html
@@ -115,28 +115,9 @@
         </div>
       </div>
 
-      <table border="1" style="border-collapse: collapse; width: 100%; border: 1px solid black; margin-top: 20px;">
-        <thead>
-            <tr style="background-color: #f2f2f2;">
-                <th style="padding: 10px;">Thema</th>
-                <th style="padding: 10px;">Datum</th>
-                <th style="padding: 10px;">Löschen</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Hier könnten weitere Zeilen hinzugefügt werden -->
-            <tr>
-                <!-- Hier füge JavaScript ein, um receivedData einzufügen -->
-                <td id="receivedDataCell" style="padding: 10px;"></td>
-                <td style="padding: 10px;">01.01.2023</td>
-                <td style="padding: 10px;">
-                    <button style="background-color: red; color: white; border: none; padding: 5px 10px; border-radius: 4px; cursor: pointer;">Löschen</button>
-                </td>
-            </tr>
-            <!-- Weitere Zeilen entsprechend dem Format oben einfügen, um weitere Daten anzuzeigen -->
-        </tbody>
-    </table>
-    <script src="app.js" defer></script>
+      <div class="centered">
+        <iframe src="https://script.google.com/macros/s/AKfycbwY4hJcTO4E9mkh47Sy3jbfhzFpLMNcRezPfTeQ72q62Ocg-nUlnMG5TCCfU0Ii4gll/exec" class="sheet-container"></iframe>
+      </div>
       
       <div class="chat-container">
         <div class="chat-messages">
